fix: [XEOS-9999] fix tag z-index error

--- a/src/components/Tabs/style.scss
+++ b/src/components/Tabs/style.scss
@@ -97,7 +97,6 @@
 
 .Tabs:not(.Tabs--secondary) >#Tabs >.nav-tabs > li {
   position: relative;
-  z-index: 1;
   &:has(a:active),
   &:has(a.active) {
     border-top: 2px solid $primary-normal;
